# PyRecastDetour-WithCrown

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SETUP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DISTRIBUTION.md  DebugUtilsStub.cpp  FEATURES.md  IMPLEMENTATION_SUMMARY.md  Navmesh.cpp  Navmesh.h  PYTHON_API.md  PerfTimer.cpp  PyRecastDetour.cpp  QUICK_REFERENCE.md  QUICK_START.md  README.md  Sample.cpp  SampleInterfaces.cpp  SampleInterfaces.h  __init__.py  build.bat  build.sh  build_msvc.bat  clean.bat  clean.sh  example.py  setup_py37.bat
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: README.md
